infinite scrolling, but loads the same x posts every time